# merit

./: .gitignore  build_docs.py  pyproject.toml  setup.cfg
docs/: README.md  api.md  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  requirements.txt
docs/api/: api.rst  cli.rst  core.rst  evaluation.rst  index.rst  knowledge.rst  metrics.rst  monitoring.rst  storage.rst  testset_generation.rst
docs/api_clients/: 01_overview.md  02_basic_client.md  03_openai_client.md  04_custom_clients.md  05_response_formats.md  index.md
docs/customization/: 01_overview.md  02_custom_metrics.md  03_custom_evaluators.md  04_custom_prompts.md  05_report_templates.md  index.md
docs/evaluation/: 01_overview.md  02_rag_evaluation.md  03_llm_evaluation.md  index.md
docs/examples/: basic_rag_chatbot.rst  index.rst
docs/getting_started/: 01_introduction.md  02_installation.md  03_key_concepts.md  04_quick_start.md  index.md
docs/knowledge_bases/: 01_overview.md  02_creating_knowledge_bases.md  03_working_with_knowledge_bases.md  index.md
docs/testset_generation/: 01_overview.md  02_basic_generation.md  03_example_guided_generation.md  04_customizing_generation.md  index.md
docs/tutorials/: 01_basic_workflow.md  02_custom_api_evaluation.md  03_advanced_testset_generation.md  index.md
examples/: api_client_examples.py  api_examples.ipynb  openai_examples.py  testset_generation_example.py
examples/mongodb/: README_MongoDB_Metrics.md  calculate_mongodb_metrics.py  mongodb_metrics_config.py
merit/api/: __init__.py  base.py  client.py  openai_client.py  run_config.py
merit/core/: __init__.py  cache.py  logging.py  models.py  prompts.py  utils.py
merit/evaluation/: __init__.py  prompts.py
merit/evaluation/evaluators/: __init__.py  base.py  llm.py  rag.py
merit/evaluation/metrics/: __init__.py  base.py  classification.py  rag.py
merit/evaluation/templates/: __init__.py
merit/knowledge/: __init__.py  knowledgebase.py
merit/metrics/: __init__.py  base.py  prompts.py  rag.py
merit/monitoring/: models.py
merit/storage/: mongodb_storage.py
merit/templates/: __init__.py  config_my_custom_dashboard.json  monitoring_dashboard.html
merit/testset_generation/: __init__.py  analysis.py  generator.py  prompts.py  utils.py
tests/: README.md  conftest.py  pytest.ini
tests/integration/: test_error_handling.py
tests/unit/api/: test_errors.py  test_openai_client.py  test_run_config.py
(+5 files in other folders)
