[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "merit"
description = "Monitoring, Evaluation, Reporting, Inspection, Testing framework for AI systems"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version"]
authors = [
    {name = "adithyakpb"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
    "requests",
    "python-dotenv",
    "pydantic",
    "jsonschema",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy",
]
all = [
    "merit[openai,dev]",
]

[tool.setuptools]
packages = ["merit"]

[tool.setuptools.dynamic]
version = {attr = "merit.__version__"}
