[metadata]
name = merit
version = attr: merit.__version__
description = Monitoring, Evaluation, Reporting, Inspection, Testing framework for AI systems
long_description = file: README.md
long_description_content_type = text/markdown
author = adithyakpb
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    requests
    python-dotenv
    pydantic
    jsonschema

[options.extras_require]
openai =
    openai>=1.0.0
dev =
    pytest
    pytest-cov
    black
    isort
    flake8
    mypy
all =
    %(openai)s
    %(dev)s

[options.packages.find]
exclude =
    tests
    examples
